# lookup-artesnaut

./: LICENSE  README.md
data/: items.json  temp.html
data/base/: items.html
data/items/: accessory.json  armor.json  shield.json  weapon.json
data/master/: attributes.json  locations.json  monsters.json  ranks.json  sets.json  skills.json  status.json
data/temp/: arms.csv  axe.csv  belt.csv  blade.csv  boots.csv  bottle.csv  bow.csv  dagger.csv  gun.csv  heavyArmor.csv  helmet.csv  jewel.csv  knuckle.csv  lance.csv  lightArmor.csv  mantle.csv  necklace.csv  other.csv  ring.csv  shield.csv  staff.csv  sword.csv
data_digger/: pyproject.toml
data_digger/output/: items.csv
data_digger/src/data_digger/: __init__.py  main.py
data_spoiler/: pyproject.toml
data_spoiler/src/data_spoiler/: __init__.py  csv_to_json.py  extract_dagger.py  extract_items.py
docs/: design.md
gui/: README.md  pyproject.toml
gui/src/gui/: __init__.py  front.py  main.py
