[project]
name = "data-digger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "behike56", email = "fxy.x@lambda-publishing.com" }
]
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "pandas>=3.0.1",
    "requests>=2.32.5",
]

[project.scripts]
data-digger = "data_digger.main:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
useLibraryCodeForTypes = true
