[project]
name = "data-spoiler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "behike56", email = "fxy.x@lambda-publishing.com" }
]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
]

[project.scripts]
data-spoiler      = "data_spoiler:main"
data-spoiler-json = "data_spoiler.csv_to_json:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-describe>=3.1.0",
    "ruff>=0.15.5",
]
